<resources>
    <string name="app_name">myproject</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="Register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_login1">Click to Login</string>
    <string name="login112">Login</string>
    <string name="logout">Logout</string>
</resources>